# pokedex-spider

./: .gitignore  README.md  pyproject.toml
pokedex-spider/: scrapy.cfg
pokedex-spider/pokedex_spider/: items.py  middlewares.py  pipelines.py  runer.py  settings.py
pokedex-spider/pokedex_spider/spiders/: ability.py  base_stats.py  item.py  move.py  pokemon.py
pokedex-spider/pokedex_spider/utils/: effect_text.py
