[tool.poetry]
name = "pokedex-spider"
version = "0.1.0"
description = ""
authors = ["origami <mcxyml123@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
